Tue Jul 11 11:03:50 2000  David L. Levine  <levine@cs.wustl.edu>

        * bin/make_release: chmod of kits to 664, and chgrp to doc,
          after creation.

Tue Jul 11 10:45:46 2000  David L. Levine  <levine@cs.wustl.edu>

        * bin/generate_man_pages: don't try generate man pages for
          RMCast_Reassembly.h, either, because it trips up class2man.
          [Bug 608]

Tue Jul 11 10:40:48 2000  David L. Levine  <levine@cs.wustl.edu>

        * bin/make_release: robustness improvements:
          1) set CVSROOT and ACE_ROOT environment variables, and $logname,
             to reasonable default values if they were null.
          2) Always prepend /project/danzon/pkg/gnu/bin to PATH.  Before,
             -d was first used to check to see if it existed.  But, it
             might not have been mounted, and -d won't cause it to automount.

Tue Jul 11 08:24:33 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ace/POSIX_Asynch_IO.h,
        * ace/SUN_Proactor.h: Fixed these files so that class2man
          now generates proper manual pages. [Bug 608]

Tue Jul 11 08:07:23 2000  David L. Levine  <levine@cs.wustl.edu>

        * bin/generate_man_pages: don't try generate man pages for
          RMCast_Export.h, because it's a generated file and doesn't
          have any man page formatting info.  It trips up class2man.
          [Bug 608]

Tue Jul 11 07:42:57 2000  David L. Levine  <levine@cs.wustl.edu>

        * ace/Local_Tokens.cpp (ACE_TPQ_Entry ctor): cast result
          to ACE_Thread::self () to u_long, to avoid mismatch with
          %lu sprintf parameter.

Tue Jul 11 06:21:35 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

        * apps/Gateway/Peer/Peer.cpp (transmit): The last two arguments to
          Event_Header were reversed!  Thanks to Kim Lester
          <Kim_R_Lester@rta.nsw.gov.au> for reporting this.

Mon Jul 10 20:35:08 2000 Marina Spivak  <marina@cs.wustl.edu>

        * ACE version 5.1.5 released.
